k8s/docusaurus/docu_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docusaurus
spec:
  selector:
    matchLabels:
      app: docusaurus
  template:
    metadata:
      labels:
        app: docusaurus
    spec:
      containers:
      - name: docusaurus
        image: ferrarijose/docusaurus:v4
        ports:
        - containerPort: 80
