k8s/docusaurus/docu_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus
spec:
  selector:
    app: docusaurus
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
