k8s/docusaurus/docu_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docusaurus
spec:
  rules:
  - host: hinsch.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docusaurus
            port:
              number: 80
